--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@ionic-native/status-bar": "3.12.1",
     "@ionic/storage": "2.0.1",
     "angular2-swing": "^0.14.0",
+    "angularfire2": "^4.0.0-rc.2",
+    "firebase": "^4.4.0",
     "ionic-angular": "3.7.0",
     "ionicons": "3.0.0",
     "rxjs": "5.4.3",
