--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@angular/platform-browser-dynamic": "4.4.3",
         "@ionic-native/camera": "^4.3.0",
         "@ionic-native/core": "^3.12.1",
+        "@ionic-native/social-sharing": "^4.3.2",
         "@ionic-native/splash-screen": "3.12.1",
         "@ionic-native/status-bar": "3.12.1",
         "@ionic/storage": "2.0.1",
@@ -34,6 +35,8 @@
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
+        "cordova-plugin-x-socialsharing": "^5.2.1",
+        "es6-promise-plugin": "^4.1.0",
         "firebase": "^4.4.0",
         "ionic-angular": "3.7.0",
         "ionic-plugin-keyboard": "^2.2.1",
@@ -58,7 +61,8 @@
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-x-socialsharing": {}
         },
         "platforms": [
             "ios"
