--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@ionic/storage": "2.0.1",
         "angular2-swing": "^0.14.0",
         "angularfire2": "^4.0.0-rc.2",
+        "cordova-android": "^6.2.3",
         "cordova-ios": "^4.4.0",
         "cordova-plugin-camera": "^2.4.1",
         "cordova-plugin-compat": "^1.2.0",
@@ -65,6 +66,7 @@
             "cordova-plugin-x-socialsharing": {}
         },
         "platforms": [
+            "android",
             "ios"
         ]
     }
